--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@ pkginclude_HEADERS = pycairo.h
 pycairoexec_PYTHON = __init__.py
 
 pycairoexec_LTLIBRARIES = _cairo.la
-_cairo_la_LDFLAGS = -module -avoid-version -export-symbols-regex init_cairo
+_cairo_la_LDFLAGS = -module -avoid-version -export-symbols-regex "init_cairo|PyInit__cairo"
 _cairo_la_LIBADD = $(CAIRO_LIBS)
 _cairo_la_CPPFLAGS = $(PYTHON_INCLUDES) $(CAIRO_CFLAGS)
 _cairo_la_SOURCES = \
